# duraark_diffdetect

./: CMakeLists.txt  Dockerfile
src/: duraark_diffdetect.cpp
